src/styles/Home.css
.home {
  min-height: 70vh;
  display: block;
}

.home h1 {
  font-size: 32px;
  font-weight: 400;
}

.hero-video {
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
  z-index: 0;
}
.gradient-overlay-hero-video{
  position: absolute;
  top: 0;
  left: 0;
  display: block;
  width: 100%;
  height: 100%;
  object-fit: cover;
  z-index: 0;
  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.5));
}

.home .hero {
  position: relative;
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  height: 100vh;
  overflow: hidden;
  background-color: #0b0f19;
}

.home-section-cards {
  position: relative;
  display: block;
  justify-content: center;
  align-items: center;
  width: 100%;
  overflow: hidden;
}

.home_grid__wrapper {
  display: grid;
  height: 100%;
  gap: 8px;
  grid-template-columns: 1fr 1fr 1fr;
  padding: max(50px, 5.2083333333vw);
}

.homepage__arrow {
    z-index: 9;
    display: flex;
    border-radius: 14px;
    background: color-mix(var(--color-secondary)60% ,transparent 40%);
    align-items: center;
    justify-content: center;
    padding: 16px 11px;
    position: absolute;
    animation: MoveUpDown 1.5s ease-in-out infinite;
}

.homepage__arrow__icon {
    display: flex;
    width: 7px;
    height: 23px;
}

@keyframes MoveUpDown {
  0%, 100% {
    bottom: 15px;
  }
  50% {
    bottom: 45px;
  }
}

